--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -10,6 +10,14 @@
    box-shadow: 0.4rem 0.4rem 0.6rem #00000040;
    margin: 2rem 2rem;
 }
+.card ul {
+   padding: 1rem 0;
+   list-style: none;
+}
+.card a {
+   text-decoration: none;
+   color: white;
+}
 .card h3 {
    margin-bottom: 2rem;
 }
@@ -21,6 +29,6 @@
    -webkit-transform: translateY(-1.5rem);
    -ms-transform: translateY(-1.5rem);
    transform: translateY(-1.5rem);
-   border: #f2295bf0 0.2em solid;
+   border: #049bffae 0.2em solid;
    border-radius: 2.5rem 0 2.5rem 0;
 }
