--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,5 +1,14 @@
 .container {
+   position: fixed;
+   top: 0;
+   width: 100vw;
+   height: 100vh;
    background-image: url(../Images/home.png);
+   background-size: cover;
+   background-repeat: no-repeat;
+   position: absolute;
+   background-position: center center;
+   background-attachment: fixed;
    /* padding: 0 75px;
    display: grid;
    grid-template-columns: 0.3fr 0.7fr;
@@ -30,4 +39,9 @@
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
+}
+.spinner {
+   position: relative;
+   top: 25%;
+   left: 50%;
 }
