--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -55,6 +55,7 @@
    position: relative;
    height: 2.8em;
    padding-right: 3.3em;
+   text-decoration: none;
 }
 
 .cssbuttons-io-button .icon {
