--- a/client/src/components/Paged/Paged.css
+++ b/client/src/components/Paged/Paged.css
@@ -6,3 +6,10 @@
    background-color: #212121;
    color: white;
 }
+@media screen and (max-width: 425px) {
+   .paged button {
+      font-size: 1rem;
+      padding: .87rem;
+      margin: 0 5px;
+   }
+}
