--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -23,7 +23,9 @@
 }
 
 .card img {
-   width: 15rem;
+   width: 100%;
+   height: 200px;
+   object-fit: cover;
 }
 .card:hover {
    -webkit-transform: translateY(-1.5rem);
