--- a/client/src/components/Paged/Paged.css
+++ b/client/src/components/Paged/Paged.css
@@ -1,15 +1,21 @@
 .paged button {
-   font-size: 1rem;
-   padding: 1rem;
-   margin: 0 0.6rem;
-   border-radius: 10px;
-   background-color: #212121;
-   color: white;
+  font-size: 1rem;
+  padding: 1rem;
+  margin: 0 0.6rem;
+  border-radius: 10px;
+  background-color: #212121;
+  color: white;
+  transition: 0.4s;
+}
+.paged button:hover {
+  border: #049bffae 0.06em solid;
+  cursor: pointer;
+  transform: translate3d(0, -0.4rem, 0);
 }
 @media screen and (max-width: 425px) {
-   .paged button {
-      font-size: 1rem;
-      padding: .87rem;
-      margin: 0 5px;
-   }
+  .paged button {
+    font-size: 1rem;
+    padding: 0.87rem;
+    margin: 0 5px;
+  }
 }
